添加基本使用参数列表2